--- a/index.html
+++ b/index.html
@@ -1,50 +1,47 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta name="description"
-        content="2023-2024 工作展示">
-  <meta name="keywords" content="2023-2024 Portfolio">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>2023-2024 工作展示</title>
+    <meta charset="utf-8">
+    <meta name="description"
+          content="2023-2024 工作展示">
+    <meta name="keywords" content="2023-2024 Portfolio">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>2023-2024 工作展示</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
 
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
+        function gtag() {
+            dataLayer.push(arguments);
+        }
 
-    function gtag() {
-      dataLayer.push(arguments);
-    }
+        gtag('js', new Date());
 
-    gtag('js', new Date());
+        gtag('config', 'G-PYVRSFMDRL');
+    </script>
+    <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
+          rel="stylesheet">
+    <link rel="stylesheet" href="./static/css/bulma.min.css">
+    <link rel="stylesheet" href="./static/css/bulma-carousel.min.css">
+    <link rel="stylesheet" href="./static/css/bulma-slider.min.css">
+    <link rel="stylesheet" href="./static/css/fontawesome.all.min.css">
+    <link rel="stylesheet"
+          href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
+    <link rel="stylesheet" href="./static/css/index.css">
+    <link rel="icon" href="./static/images/3dscan.svg">
+    <link rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/img-comparison-slider@8/dist/styles.css" />
 
-    gtag('config', 'G-PYVRSFMDRL');
-  </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script defer src="./static/js/fontawesome.all.min.js"></script>
+    <script src="./static/js/bulma-carousel.min.js"></script>
+    <script src="./static/js/bulma-slider.min.js"></script>
+    <script defer
+            src="https://cdn.jsdelivr.net/npm/img-comparison-slider@8/dist/index.js"></script>
 
-  <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
-        rel="stylesheet">
-
-  <link rel="stylesheet" href="./static/css/bulma.min.css">
-  <link rel="stylesheet" href="./static/css/bulma-carousel.min.css">
-  <link rel="stylesheet" href="./static/css/bulma-slider.min.css">
-  <link rel="stylesheet" href="./static/css/fontawesome.all.min.css">
-  <link rel="stylesheet"
-        href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
-  <link rel="stylesheet" href="./static/css/index.css">
-  <link rel="icon" href="./static/images/3dscan.svg">
-  <link rel="stylesheet" type="text/css" href="./static/css/test.css">
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script defer src="./static/js/fontawesome.all.min.js"></script>
-  <script src="./static/js/bulma-carousel.min.js"></script>
-  <script src="./static/js/bulma-slider.min.js"></script>
-  <script src="./static/js/index.js"></script>
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 </head>
 <body>
-
 <section class="hero">
   <div class="hero-body">
     <div class="container is-max-desktop">
@@ -66,8 +63,8 @@
         <!-- 1. -->
         <div class="columns is-centered">
             <div class="column is-full-width">
-                <h2 class="title is-3">1.三维扫描点云拼接</h2>
-                <h3 class="title is-4">1.1 标记点拼接算法重构</h3>
+                <h2 class="title is-4">1.三维扫描点云拼接</h2>
+                <h3 class="title is-5">1.1 标记点拼接算法重构</h3>
                 <div class="content has-text-justified">
                     <ul>
                         <li>数据结构优化，算法逻辑简化，功能模块化</li>
@@ -98,7 +95,7 @@
                 <br />
                 <br />
 
-                <h3 class="title is-4">1.2 纹理+特征拼接算法开发</h3>
+                <h3 class="title is-5">1.2 纹理+特征拼接算法开发</h3>
                 <div class="content has-text-justified">
                     <ul>
                         <li>优化特征点提取算子，增强低纹理区域提点能力</li>
@@ -137,7 +134,7 @@
                 <br /> 
                 <br /> 
 
-                <h3 class="title is-4">1.3 混合拼接算法开发</h3>
+                <h3 class="title is-5">1.3 混合拼接算法开发</h3>
                 <p class="has-text-weight-bold has-text-danger">公司嘉奖：三星（最高）BINGO创意奖</p>
                 <div class="content has-text-justified">
                     <ul>
@@ -167,49 +164,63 @@
 
     <div class="columns is-centered">
       <div class="column is-full-width">
-          <h2 class="title is-3">2.散斑辅助激光线重建模块</h2>
+          <h2 class="title is-4">2.散斑辅助激光线重建模块</h2>
           <div class="content has-text-justified">
-            <h3 class="title is-5"><img src="./static/images/problem.svg" width="30px"> 难点问题</h3>
-            <ul>
-                <li>消费级彩色扫描仪使用激光扫描模式中经常出现飞线（重建错误）、少线（重建缺失）等异常现象</li>
-                <li>消费级彩色扫描仪由于结构不稳定，需要频繁进行激光平面参数、相机外参的标定，利用这些参数来保证重建校验的准确性</li>
-            </ul>
+              <h3 class="title is-5">
+                  <span class="icon is-medium">
+                      <img src="./static/images/problem.svg">
+                  </span>
+                  难点问题
+              </h3>
+              <ul>
+                  <li>消费级彩色扫描仪使用激光扫描模式中经常出现飞线（重建错误）、少线（重建缺失）等异常现象</li>
+                  <li>消费级彩色扫描仪由于结构不稳定，需要频繁进行激光平面参数、相机外参的标定，利用这些参数来保证重建校验的准确性</li>
+              </ul>
           </div>
 
           <div class="content has-text-justified">
-            <h3 class="title is-5"><img src="./static/images/method.svg" width="30px"> 主要方法</h3>
-            <ul>
-                <li>利用散斑匹配得到的视差图辅助激光点进行匹配</li>
-                <br />
-                <div class="columns is-vcentered interpolation-panel">
-                  <img src="./static/images/2/laser_rec.png" class="interpolation-image" alt="Interpolate start reference image.">
-                </div>
-
-                <li>利用图像特征相似度，对激光重建的匹配关系进行筛选</li>
-                <br />
-                <div class="columns is-vcentered interpolation-panel">
-                  <img src="./static/images/2/rec_error.png" class="interpolation-image" alt="Interpolate start reference image.">
-                </div>
-                <div class="has-text-centered">
-                  <p class="has-text-weight-bold">该方法视差图重建错误的区域，容易导致激光线重建的错误</p>
-                </div>
-                <br />
-                <div class="columns is-vcentered interpolation-panel">
-                  <img src="./static/images/2/sim_filter.png" class="interpolation-image" alt="Interpolate start reference image.">
-                </div>
-                <div class="has-text-centered">
-                  <p class="has-text-weight-bold">这时进行基于图像相似度校验可以较好得区分出重建正确和错误的区域</p>
-                </div>
-            </ul>
+              <h3 class="title is-5">
+                  <span class="icon is-medium">
+                      <img src="./static/images/method.svg">
+                  </span>
+                  主要方法
+              </h3>
+              <ul>
+                  <li>利用散斑匹配得到的视差图辅助激光点进行匹配</li>
+                  <br />
+                  <div class="columns is-vcentered interpolation-panel">
+                      <img src="./static/images/2/laser_rec.png" class="interpolation-image" alt="Interpolate start reference image.">
+                  </div>
+                  <li>利用图像特征相似度，对激光重建的匹配关系进行筛选</li>
+                  <br />
+                  <div class="columns is-vcentered interpolation-panel">
+                      <img src="./static/images/2/rec_error.png" class="interpolation-image" alt="Interpolate start reference image.">
+                  </div>
+                  <div class="has-text-centered">
+                      <p class="has-text-weight-bold">该方法视差图重建错误的区域，容易导致激光线重建的错误</p>
+                  </div>
+                  <br />
+                  <div class="columns is-vcentered interpolation-panel">
+                      <img src="./static/images/2/sim_filter.png" class="interpolation-image" alt="Interpolate start reference image.">
+                  </div>
+                  <div class="has-text-centered">
+                      <p class="has-text-weight-bold">这时进行基于图像相似度校验可以较好得区分出重建正确和错误的区域</p>
+                  </div>
+              </ul>
           </div>
 
           <div class="content has-text-justified">
-            <h3 class="title is-5"><img src="./static/images/result.svg" width="30px"> 工作成果</h3>
-            <ul>
-                <li>大量减少了消费级彩色扫描仪使用激光扫描模式中经常出现飞线（重建错误）、少线（重建缺失）等异常现象</li>
-                <li>取缔利用激光平面的校验方式，大幅减少扫描仪标定次数，优化用户体验</li>
-                <li>获得<p class="has-text-weight-bold has-text-danger">公开专利：基于图像特征相似度的激光线匹配方法</p></li>
-            </ul>
+              <h3 class="title is-5">
+                  <span class="icon is-medium">
+                      <img src="./static/images/result.svg">
+                  </span>
+                  工作成果
+              </h3>
+              <ul>
+                  <li>大量减少了消费级彩色扫描仪使用激光扫描模式中经常出现飞线（重建错误）、少线（重建缺失）等异常现象</li>
+                  <li>取缔利用激光平面的校验方式，大幅减少扫描仪标定次数，优化用户体验</li>
+                  <li><p class="has-text-weight-bold has-text-danger">公开专利：基于图像特征相似度的激光线匹配方法</p></li>
+              </ul>
           </div>
       </div>
     </div>
@@ -218,107 +229,130 @@
 
 <section class="section">
   <div class="container is-max-desktop">
-    <!-- 2. -->
-
+    <!-- 3. -->
     <div class="columns is-centered">
       <div class="column is-full-width">
-          <h2 class="title is-3">3.散斑扫描平面检测功能</h2>
+          <h2 class="title is-4">3.散斑扫描平面检测功能</h2>
           <div class="content has-text-justified">
-            <h3 class="title is-5"><img src="./static/images/problem.svg" width="30px"> 难点问题</h3>
-            <ul>
-                <li>消费级彩色扫描仪使用散斑扫描模式中，重建点云的背景平面需要手动剔除</li>
-                <li>在仅使用点云特征拼接时，扫描到单个平面或由多平面组成的相似区域，很容易配准错误</li>
-            </ul>
+              <h3 class="title is-5">
+                  <span class="icon is-medium">
+                      <img src="./static/images/problem.svg">
+                  </span>
+                  难点问题
+              </h3>
+              <ul>
+                  <li>消费级彩色扫描仪使用散斑扫描模式中，重建点云的背景平面需要手动剔除</li>
+                  <li>在仅使用点云特征拼接时，扫描到单个平面或由多平面组成的相似区域，很容易配准错误</li>
+              </ul>
           </div>
 
           <div class="content has-text-justified">
-            <h3 class="title is-5"><img src="./static/images/method.svg" width="30px"> 主要方法</h3>
-            <li>基于RANSAC算法，优化迭代策略，实现点云单平面及多平面提取算法</li>
-            <li>结合平面信息对点云的线特征、相似特征等进行提取，优化单帧点云特征丰富度计算，避免丰富度过低时的点云配准</li>
+              <h3 class="title is-5">
+                  <span class="icon is-medium">
+                      <img src="./static/images/method.svg">
+                  </span>
+                  主要方法
+              </h3>
+              <li>基于RANSAC算法，优化迭代策略，实现点云单平面及多平面提取算法</li>
+              <li>结合平面信息对点云的线特征、相似特征等进行提取，优化单帧点云特征丰富度计算，避免丰富度过低时的点云配准</li>
           </div>
 
           <div class="content has-text-justified">
-            <h3 class="title is-5"><img src="./static/images/result.svg" width="30px"> 工作成果</h3>
-            <div class="content has-text-justified">
-              <li>各类场景下的点云提取，平面提取准确度接近100%</li>
-              <div class="columns">
-                <div class="column is-7 has-text-centered">
-                    <img src="./static/images/3/single_plane.png" class="interpolation-image" alt="Interpolate start reference image.">
-                    <div class="has-text-centered">
-                      <p class="has-text-weight-bold">单平面提取效果</p>
-                    </div>
-                </div>
-                <div class="column is-5 has-text-centered">
-                    <img src="./static/images/3/multi_plane.png" class="interpolation-image" alt="Interpolate start reference image.">
-                    <div class="has-text-centered">
-                      <p class="has-text-weight-bold">多平面提取效果</p>
-                    </div>
-                </div>
+              <h3 class="title is-5">
+                  <span class="icon is-medium">
+                      <img src="./static/images/result.svg">
+                  </span>
+                  工作成果
+              </h3>
+              <div class="content has-text-justified">
+                  <li>各类场景下的点云提取，平面提取准确度接近100%</li>
+                  <div class="columns">
+                      <div class="column is-7 has-text-centered">
+                          <img src="./static/images/3/single_plane.png" class="interpolation-image" alt="Interpolate start reference image.">
+                          <div class="has-text-centered">
+                              <p class="has-text-weight-bold">单平面提取效果</p>
+                          </div>
+                      </div>
+                      <div class="column is-5 has-text-centered">
+                          <img src="./static/images/3/multi_plane.png" class="interpolation-image" alt="Interpolate start reference image.">
+                          <div class="has-text-centered">
+                              <p class="has-text-weight-bold">多平面提取效果</p>
+                          </div>
+                      </div>
+                  </div>
               </div>
-            </div>
-
-            <li>优化了单帧点云特征丰富的计算，减少了相似特征区域和平面特征区域的错拼现象</li>
+              <li>优化了单帧点云特征丰富的计算，减少了相似特征区域和平面特征区域的错拼现象</li>
           </div>
-
       </div>
     </div>
   </div>
 </section>
 
 <section class="section">
-  <div class="container is-max-desktop">
+    <div class="container is-max-desktop">
         <!-- 4. -->
         <div class="columns is-centered">
-          <div class="column is-full-width">
-              <h2 class="title is-3">4.散斑扫描细节优化</h2>
-              <div class="content has-text-justified">
-                  <ul>
-                      <li>沿用特征点提取的思路，提取图像散斑特征周围的高质量重建点</li>
-                      <li>
-                          调整亚像素匹配中相似度计算模板，达到最优匹配准确度
-                      </li>
-                      <li>实现不同采样分辨率下的三维点重建，开发精细扫描功能</li>
-                  </ul>
-              </div>
-          </div>
-      </div>
-  </div>
+            <div class="column is-full-width">
+                <h2 class="title is-4">4.散斑扫描细节优化</h2>
+                <div class="content has-text-justified">
+                    <h3 class="title is-5">
+                        <span class="icon is-medium">
+                            <img src="./static/images/problem.svg">
+                        </span>
+                        难点问题
+                    </h3>
+                    <ul>
+                        <li>彩色扫描仪使用散斑扫描模式下，单帧点云的重建质量不高</li>
+                        <li>整体重建的单帧点云噪声较大，融合后的点云模型细节丢失</li>
+                    </ul>
+                </div>
+                <div class="content has-text-justified">
+                    <h3 class="title is-5">
+                        <span class="icon is-medium">
+                            <img src="./static/images/method.svg">
+                        </span>
+                        主要方法
+                    </h3>
+                    <li>运用特征点提取的思路，筛选出图像中散斑特征周围的高质量重建点</li>
+                    <li>调整亚像素级别精匹配中相似度计算模板，达到最优匹配准确度</li>
+                    <li>实验发现采样密度和扫描，实现不同采样分辨率下的三维点重建</li>
+                </div>
+                <div class="content has-text-justified">
+                    <h3 class="title is-5">
+                        <span class="icon is-medium">
+                            <img src="./static/images/result.svg">
+                        </span>
+                        工作成果
+                    </h3>
+                    <div class="columns is-vcentered interpolation-panel">
+                        <div class="column is-4 has-text-centered">
+                            <img-comparison-slider class="slider-example-focus">
+                                <img slot="first" width="100%" src="./static/images/4/origin.png">
+                                <img slot="second" width="100%" src="./static/images/4/1280 0.1.png">
+                            </img-comparison-slider>
+
+                        </div>
+                        <div class="column is-5 has-text-centered">
+                            <img-comparison-slider class="slider-example-focus">
+                                <img slot="first" width="100%" src="./static/images/4/zhongce_old.png">
+                                <img slot="second" width="100%" src="./static/images/4/zhongce_new.png">
+                            </img-comparison-slider>
+                        </div>
+                        <div class="column is-3 has-text-centered">
+                            <img-comparison-slider class="slider-example-focus" direction="vertical">
+                                <img slot="first" width="100%" src="./static/images/4/elephant_old.png">
+                                <img slot="second" width="100%" src="./static/images/4/elephant_new.png">
+                            </img-comparison-slider>
+                        </div>
+                    </div>
+                    <div class="has-text-centered">
+                        <p class="has-text-weight-bold">滑动对比图</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
-<div id="outer-container">
-  <div id="container">
-    <img id="image1" src="./static/images/4/zhongce_new.png">
-    <div id="slider" class="ui-draggable ui-draggable-handle">
-      <div class="arrow-right">▶</div>
-      <div class="arrow-left">◀</div>
-    </div>
-    <img id="image2" src="./static/images/4/zhongce_old.png">
-  </div>
-</div>
-<script src="./static/js/test.js"></script>
-
-<div id="outer-container">
-  <div id="container">
-    <img id="image1" src="./static/images/4/1280 0.1.png">
-    <div id="slider" class="ui-draggable ui-draggable-handle">
-      <div class="arrow-right">▶</div>
-      <div class="arrow-left">◀</div>
-    </div>
-    <img id="image2" src="./static/images/4/origin.png">
-  </div>
-</div>
-
-<div id="outer-container">
-  <div id="container">
-    <img id="image1" src="./static/images/4/elephant_new.png">
-    <div id="slider" class="ui-draggable ui-draggable-handle">
-      <div class="arrow-right">▶</div>
-      <div class="arrow-left">◀</div>
-    </div>
-    <img id="image2" src="./static/images/4/elephant_old.png">
-  </div>
-</div>
-<script src="./static/js/test.js"></script>
-
 <footer class="footer">
 </footer>
 
